[package]
name = "dota-terrain-mod"
version = "0.1.0"
authors = ["ObsoleteXero"]
edition = "2021"
repository = "https://github.com/ObsoleteXero/Dota-Terrain-Mod"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
crc = "3"
md-5 = "0.10"
iced = { version = "0.13", features = ["image", "tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "fs"] }
reqwest = { version = "0.12", features = ["rustls-tls"] }
open = "5"
dirs = "5"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.51.0"